Created createWallet api
